--- a/Tugas4.html
+++ b/Tugas4.html
@@ -3,26 +3,30 @@
 
 <head>
     <link rel="stylesheet" href="style.css">
-    <h1>Tugas 4 Platform JavaScript</h1>
-    <h2> Form </h2>
-</head>
+    <h1>Tugas 4 - JavaScript</h1>
+    <h3>Nama : Puteri Marie Daniella <br>NIM : 215314068</h3>
+</head> 
 
 <body>
+
+    <img class="picture" src="me.jpeg"/> 
+
     <div class="page">
-        <div class="name">
-            <label for="Nama">Nama</label>
-            <input type="text" id="Nama" />
+        <div class="nama">
+            <label for="Nama"><br>Nama : </label>
+            <input type="text" id="Nama"/>
         </div>
 
         <div class="amount">
-            <label for="jmlhPilihan"><br>Jumlah Pilihan </label>
-            <input type="number" id="jmlhPilihan" />
+            <label for="jmlhPilihan"><br>Jumlah Pilihan : </label>
+            <input type="number" id="jmlhPilihan2"/>
         </div>
 
         <br>
         <button onclick="displayForm()">OK</button>
         <div id="pilihan1"></div>
         <div id="button1"></div>
+
         <form>
             <div id="list"></div>
             <div id="submit1"></div>
@@ -30,7 +34,7 @@
 
         <p id="hasil"></p>
         <script src="Tugas4.js"></script>
-
+        
     </div>
 
     <div class="footer">
